test/netlist/error/pipe-nested-arity.bop
C(e, f) = out
where
  out = and(e, pipe("./external.exe", f));
end where;
